# grepvec

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  grepvec-launch.sh
src/: agent_memory.rs  compliance.rs  enscribe_embed.rs  lib.rs  memory.rs  tree_sitter_validator.rs  vector_backend.rs
src/canvas/: classify.rs  layout.rs  mod.rs  sphere_view.rs
src/cli/: absorb.rs  boundary.rs  context.rs  document.rs  embed.rs  init.rs  mcp.rs  mod.rs  read.rs  reconcile.rs  refresh.rs  remember.rs  search.rs
src/inventory/: biography.rs  boundary.rs  db.rs  edges.rs  external_deps.rs  items.rs  mod.rs  qualified_names.rs  scope.rs
